--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,16 +1,22 @@
-@import './base.css';
+/* @import './base.css'; */
+body {
+  min-height: 100vh;
+  display: flex;
+  place-items: center;
 
+}
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   font-weight: normal;
 }
 
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  /* color: hsla(160, 100%, 37%, 1); */
+  color: var(--el-color-primary);
   transition: 0.4s;
   padding: 3px;
 }
@@ -22,14 +28,13 @@ a,
 }
 
 @media (min-width: 1024px) {
-  body {
+  /* body {
     display: flex;
     place-items: center;
-  }
+  } */
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
 }
